<resources>
    <string name="app_name">Lamp</string>
    <string name="no_wifi_remind">wifi未连接，请先</string>
    <string name="connect">连接</string>
    <string name="func_tv_1">亮度</string>
    <string name="bright_seek_bar_tv_1">暗</string>
    <string name="bright_seek_bar_tv_2">正常</string>
    <string name="bright_seek_bar_tv_3">亮</string>
    <string name="func_tv_2">闪烁</string>
    <string name="speed">速度</string>
    <string name="twinkle_seek_bar_tv_1">交替</string>
    <string name="twinkle_seek_bar_tv_2">整体</string>
    <string name="twinkle_seek_bar_tv_3">组合</string>
    <string name="speed_seek_bar_tv_1">慢</string>
    <string name="speed_seek_bar_tv_2">中</string>
    <string name="speed_seek_bar_tv_3">快</string>
    <string name="func_tv_3">渐明暗</string>
    <string name="func_tv_4">颜色</string>
    <string name="color_seek_bar_tv_1">颜色一</string>
    <string name="color_seek_bar_tv_2">颜色二</string>
    <string name="color_seek_bar_tv_3">彩色</string>
    <string name="func_tv_5">追光</string>
    <string name="change_ssid">修改SSID</string>
    <string name="setting_tv_1">修改SSID</string>
    <string name="setting_tv_2">修改密码</string>
    <string name="setting_tv_3">设置语言</string>
    <string name="restart">重启</string>
    <string name="setting">设置</string>
    <string name="change_wifi_psd">重置密码</string>
    <string name="change_language">设置语言</string>
    <string name="reset">重置</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="connect_failed">连接失败</string>


    <string name="tab_bright">常亮</string>
    <string name="tab_twinkle">闪烁</string>
    <string name="tab_gradient">渐变</string>
    <string name="tab_color">颜色</string>
    <string name="tab_light">追光</string>
    <string name="new_psd">新密码</string>
    <string name="write_ssid">请输入SSID</string>
    <string name="enter">进入</string>
    <string name="timing">定时</string>
    <string name="save">保存</string>
    <string name="ssid_can_not_be_null">SSID不能为空！</string>
    <string name="start_time_tv">开启时间</string>
    <string name="end_time_tv">关闭时间</string>
    <string name="plz_open_switch">请先打开定时开关！</string>
    <string name="remind">提示</string>
    <string name="remind_save">未保存，确定退出么？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="wait">请稍等...</string>
    <string name="moshiz_2">模式二</string>
    <string name="moshi_1">模式一</string>
    <string name="psd_null">密码不能为空！</string>
    <string name="psd_8_12">密码长度必须8-12位</string>
    <string name="psd_change_success">密码修改成功，请重新连接wifi！</string>
</resources>
