<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:padding="13dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/setting_back"
            android:layout_toRightOf="@+id/setting_back"
            android:text="@string/change_wifi_psd"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>




    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:paddingLeft="16dp"
            android:maxLength="16"
            android:hint="@string/new_psd"
            android:textColorHint="@color/tabUnSelected"
            android:textColor="@color/tabUnSelected"
            android:textSize="15sp"
            android:background="@drawable/white_shape"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:id="@+id/edit_psd"
            android:layout_gravity="center_horizontal" />


        <ImageView
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:src="@drawable/clear"
            android:layout_width="46dp"
            android:layout_height="46dp" />

    </RelativeLayout>

    <Button
        android:background="@drawable/yellow_shape"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/reset"
        android:textColor="@color/white_2"
        android:textSize="18sp"
        android:id="@+id/btn_reset" />

</LinearLayout>