<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/wifi_connect_icon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/wifi_connect_n"
        />


    <LinearLayout
        android:id="@+id/wifi_state_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_connect_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/wifi_state_tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_wifi_remind"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/wifi_state_tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textColor="@color/app_main_yellow"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:layout_below="@id/wifi_connect_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ListView
        android:background="@color/app_main_color"
        android:id="@+id/wifi_list"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/wifi_state_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <Button
        android:visibility="invisible"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/yellow_shape"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/enter"
        android:textColor="@color/white_2"
        android:textSize="18sp"
        android:id="@+id/button_enter" />

</RelativeLayout>